<resources>
    <string name="app_name">SuitmediaMobileDeveloperTest</string>
    <string name="user_photo">user photo</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="welcome">Welcome</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="insert_name">Insert Name</string>
    <string name="is_palindrome">is Palindrome</string>
    <string name="not_palindrome">not Palindrome</string>
    <string name="second_screen">Second Screen</string>
    <string name="third_screen">Third Screen</string>
    <string name="email_dummy">Email@gmail.com</string>
    <string name="retry">retry</string>
</resources>